--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,10 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: 100xdevs/web-app:latest
+          tags: ommpani/user-payments-app:latest
 
       - name: Verify Pushed Image
-        run: docker pull 100xdevs/web-app:latest
+        run: docker pull ommpani/user-payments-app:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
@@ -40,7 +40,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo docker pull 100xdevs/web-app:latest
+            sudo docker pull ommpani/user-payments-app:latest
             sudo docker stop web-app || true
             sudo docker rm web-app || true
-            sudo docker run -d --name web-app -p 3005:3000 100xdevs/web-app:latest
+            sudo docker run -d --name web-app -p 3005:3000 ommpani/user-payments-app:latest
