--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Verify Pushed Image
         run: docker pull ommpani/user-payments-app:latest
 
+      - name: Run Prisma Migrations
+        run: npx prisma migrate deploy --preview-feature
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
