--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,4 +43,4 @@ jobs:
             sudo docker pull ommpani/user-payments-app:latest
             sudo docker stop web-app || true
             sudo docker rm web-app || true
-            sudo docker run -d --name web-app -p 3005:3000 -e DATABASE_URL="${{ secrets.DB_URL }}" ommpani/user-payments-app:latest
+            sudo docker run -d --name web-app -p 3005:3000 -e NEXTAUTH_URL="${{secrets.NEXTAUTH_URL}}" -e DATABASE_URL="${{ secrets.DB_URL }}" ommpani/user-payments-app:latest
